2011-03-31  Naoki Takano  <takano.naoki@gmail.com>

Reviewed by Kent Tamura.

        REGRESSION (r64712): Safari removes the first blank line in a textarea
        https://bugs.webkit.org/show_bug.cgi?id=56434

        * fast/forms/textarea-newline-expected.txt: Added.
        * fast/forms/textarea-newline.html: Added to check the only first blank line in a textarea is correctly removed.
2011-03-31  Naoki Takano  <takano.naoki@gmail.com>

        Reviewed by Kent Tamura.

        REGRESSION (r64712): Safari removes the first blank line in a textarea
        https://bugs.webkit.org/show_bug.cgi?id=56434

        Test: fast/forms/textarea-newline.html

        A linefeed removal after a textarea tag is originally processed in WebCore::HTMLTextAreaElement::defaultValue().
        But HTML5 tree builder now removes the linefeed. It means linefeed removal happens twice.
        And devalutValue() removal is not needed anymore.

        * html/HTMLTextAreaElement.cpp:
        (WebCore::HTMLTextAreaElement::setDefaultValue): Remove an extra linefeed insertion at the beginning.
        (WebCore::HTMLTextAreaElement::defaultValue): Remove linefeed removal check in default value creation function.

Canonical link: https://commits.webkit.org/72447@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82656 268f45cc-cd09-0410-ab3c-d52691b4dbfc